--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ pylint==3.0.3  # или другая актуальная версия
 black==24.1.1
 isort==5.13.2
 flake8==7.0.0
+python-magic==0.4.27  # для более точного определения MIME-типов
